# rsapi

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  rustfmt.toml
docs/: sys_table.sql
src/: buffer.rs  config.rs  db.rs  jwt.rs  main.rs  response.rs  router.rs
src/middle/: auth.rs  error.rs  mod.rs
src/model/: mod.rs  prelude.rs  sys_dict.rs  sys_permission.rs  sys_role.rs  sys_role_permission.rs  sys_user.rs  sys_user_role.rs
src/schedule/: mod.rs
src/service/: file.rs  mod.rs  user.rs
