[package]
name = "rsapi"
version = "0.1.0"
edition = "2024"

[dependencies]

uuid = "1"
md5 = "0.7"
dotenv = "0.15"
chrono = "0.4"

sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }

serde = "1"
serde_json = "1"

axum = { version = "0.8.3", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
jsonwebtoken = "9.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }

tokio = { version = "1.44.2", default-features = false, features = [
    "tokio-macros",
    "rt-multi-thread",
    "signal",
    "fs"
] }
tokio-cron-scheduler = "0.13"
tokio-util = { version = "0.7.14", features = ["io"] }


[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"
strip = "symbols"
